# jamEngine

./: .gitignore  CMakeLists.txt
saves/: test1.sav
shaders/: basic_lighting.frag  basic_lighting.vert  default.frag  default.vert  lighting.frag
src/: CMakeLists.txt  Lumaria  jamEntities.h  jamInventory.h  jamLibrary.lib  jamMath.h  jamScene.h  jamTiles.h  jamTypes.h  jamUI.h  main.cpp  mainGameScene.cpp  menuScene.cpp  platform.h  platform_win32.cpp  platform_win32.h  safe_delete.cpp  safe_delete.h
src/jamLibrary/: RayAPI.h  jamCollision.h  jamDebug.cpp  jamDebug.h  jamEntities.h  jamIntrinsics.h  jamLighting.h  jamMath.h  jamScene.cpp  jamScene.h  jamText.cpp  jamText.h  jamTypes.h  jamUI.cpp  jamUI.h
src/jamPlatform/: platform_linux.cpp  platform_win32.cpp
src/jamScenes/: CircleRadialCollision.cpp  UIscene.cpp  camera_rotation.cpp  generalVectorMath.cpp  mainGameScene.cpp  menuScene.cpp  mini_project.cpp  worldToLocalExample.cpp
src/scene_build/: build.bat
user_interfaces/: test.ui
